feat: stock history 엔티티, 리포지토리, 어댑터 [#25]