@@ -4,8 +4,8 @@ import com.Toou.Toou.adapter.mysql.entity.StockHistoryEntity;
 import com.Toou.Toou.domain.model.StockDailyHistory;
 import com.Toou.Toou.port.out.StockHistoryPort;
 import java.time.LocalDate;
-import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Repository;
 
@@ -18,43 +18,21 @@ public class StockHistoryAdapter implements StockHistoryPort {
 	@Override
 	public List<StockDailyHistory> findAllHistoriesBetweenDates(String stockCode,
 			LocalDate dateFrom, LocalDate dateTo) {
-		List<StockHistoryEntity> entities = stockHistoryJpaRepository.findAllByStockCodeAndDateBetween(
+		List<StockHistoryEntity> entities = stockHistoryJpaRepository.findAllByStockMetadata_StockCodeAndDateBetween(
 				stockCode, dateFrom, dateTo);
-		return entities.stream().map(this::toDomainModel).toList();
+		return entities.stream()
+				.map(this::toDomainModel)
+				.collect(Collectors.toList());
 	}
 
 	private StockDailyHistory toDomainModel(StockHistoryEntity entity) {
-		List<Long> prices = Arrays.asList(
-				entity.getOpenPrice(),
-				entity.getHighPrice(),
-				entity.getLowPrice(),
-				entity.getClosingPrice()
-		);
-
 		return new StockDailyHistory(
 				entity.getId(),
-				entity.getStockCode(),
-				entity.getStockName(),
-				prices,
+				entity.getStockMetadata().getStockCode(),
+				entity.getStockMetadata().getStockName(),
+				List.of(entity.getOpenPrice(), entity.getHighPrice(), entity.getLowPrice(),
+						entity.getClosingPrice()),
 				entity.getDate()
-		);
-	}
-
-	private StockHistoryEntity fromDomainModel(StockDailyHistory domainModel) {
-		Long openPrice = domainModel.getPrices().get(0);
-		Long highPrice = domainModel.getPrices().get(1);
-		Long lowPrice = domainModel.getPrices().get(2);
-		Long closingPrice = domainModel.getPrices().get(3);
-
-		return new StockHistoryEntity(
-				domainModel.getId(),
-				domainModel.getStockCode(),
-				domainModel.getStockName(),
-				openPrice,
-				highPrice,
-				lowPrice,
-				closingPrice,
-				domainModel.getDate()
 		);
 	}
 }
